# ChangeLog for app-i18n/scim-bridge
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-bridge/ChangeLog,v 1.4 2006/11/04 02:37:36 matsuu Exp $

  04 Nov 2006; MATSUU Takuto <matsuu@gentoo.org> scim-bridge-0.4.7.ebuild:
  Added pkg_setup, bug #151413.

*scim-bridge-0.4.7 (22 Oct 2006)

  22 Oct 2006; MATSUU Takuto <matsuu@gentoo.org> -scim-bridge-0.4.5.ebuild,
  +scim-bridge-0.4.7.ebuild:
  Version bumped.
  Remove old version.

  18 Oct 2006; Markus Rothe <corsair@gentoo.org> scim-bridge-0.4.5.ebuild:
  Added ~ppc64; bug #151413

*scim-bridge-0.4.5 (26 Sep 2006)

  26 Sep 2006; MATSUU Takuto <matsuu@gentoo.org> +metadata.xml,
  +scim-bridge-0.4.5.ebuild:
  Initial import, bug 143295.
