@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/scim-bridge
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-bridge/ChangeLog,v 1.4 2006/11/04 02:37:36 matsuu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/scim-bridge/ChangeLog,v 1.5 2006/11/06 19:49:47 usata Exp $
+
+  06 Nov 2006; Mamoru KOMACHI <usata@gentoo.org> scim-bridge-0.4.7.ebuild:
+  Added doc USE flag and doxygen dependency for systems without doxygen.
 
   04 Nov 2006; MATSUU Takuto <matsuu@gentoo.org> scim-bridge-0.4.7.ebuild:
   Added pkg_setup, bug #151413.
